# rapid-reporter

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: check-versions.sh
src/: App.css  App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: app.rs  capture.rs  mod.rs
src-tauri/src/commands/export/: assets.rs  markdown.rs  mod.rs
src/components/: InstrumentPanel.test.tsx  InstrumentPanel.tsx  StartSessionModal.test.tsx  StartSessionModal.tsx
